--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,8 @@
     "no-param-reassign": "off",
     "eol-last": "off",
     "no-unused-vars": "off",
+    "import/no-cycle": "off",
+    "import/no-mutable-exports": "off",
     "import/extensions": [ 1, {
       "js": "always", "json": "always"
     }]
